--- a/app/src/App.css
+++ b/app/src/App.css
@@ -19,18 +19,18 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #342b28;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(12, 10, 10);
 }
 
 .App-link {
-  color: #61dafb;
+  color: #f6fb61;
 }
 
 @keyframes App-logo-spin {
